# duckdb-pdb

./: CMakeLists.txt  Makefile  extension_config.cmake
patches/: thrift.patch
scripts/: bootstrap-template.py
src/: pdb_extension.cpp
src/include/: pdb_extension.hpp
